implements manual screen listing with dummy data from cache with clean architecture
